updated several pages. and added connection to backend

--- a/My Profile tier 1/advertiser-profile.html
+++ b/My Profile tier 1/advertiser-profile.html
@@ -238,8 +238,14 @@
         <div class="container nav-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
             <div class="nav-brand">
-                <span class="logo-icon">🎯</span>
-                <span class="logo-text gradient-text">Astegni</span>
+                <a href="../index.html" class="logo-container">
+                    <div class="logo-text">
+                        <span class="logo-main">Astegni</span>
+                        <span class="logo-sub">Ad</span>
+                    </div>
+                    <span class="logo-badge">Beta</span>
+                </a>
+
             </div>
             <div class="nav-menu">
                 <a href="../branch/news.html" class="nav-link">
@@ -345,14 +351,13 @@
                     <span>My Classes</span>
                     <span class="sidebar-badge">5</span>
                 </button>
-                <button class="sidebar-btn" data-content="books">
-                    <span class="sidebar-btn-icon">📚</span>
-                    <span>My Books</span>
-                    <span class="sidebar-badge">5</span>
-                </button>
             </div>
 
             <div class="sidebar-section" data-content="permanent">
+                <button class="sidebar-btn" data-content="events">
+                    <span class="sidebar-btn-icon">📅</span>
+                    <span>Events</span>
+                </button>
                 <button class="sidebar-btn" data-content="clubs">
                     <span class="sidebar-btn-icon">🎭</span>
                     <span>Clubs</span>
@@ -380,6 +385,16 @@
             </div>
 
             <div class="sidebar-section" data-content="my-actions">
+
+                <button class="sidebar-btn" data-content="my-community">
+                    <span class="sidebar-btn-icon">👥</span>
+                    <span>My community</span>
+                </button>
+                <button class="sidebar-btn" data-content="books">
+                    <span class="sidebar-btn-icon">🛒</span>
+                    <span>My Store</span>
+                    <span class="sidebar-badge">5</span>
+                </button>
                 <button class="sidebar-btn" data-content="my-purchases">
                     <span class="sidebar-btn-icon">📦</span>
                     <span>My Purchases</span>
@@ -2034,10 +2049,13 @@
             });
         });
     </script>
+
+    <script src="../js/auth.js"></script>
     <script src="../js/institute-profile-1.js"></script>
     <script src="../js/institute-profile-2.js"></script>
     <script src="../js/institute-profile-3.js"></script>
     <script src="../js/institute-profile-4.js"></script>
+
 </body>
 
 </html>
