--- a/My Profile tier 2/employer-profile.html
+++ b/My Profile tier 2/employer-profile.html
@@ -16,8 +16,14 @@
         <div class="container nav-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
             <div class="nav-brand">
-                <span class="logo-icon">🎯</span>
-                <span class="logo-text gradient-text">Astegni</span>
+            <a href="../index.html" class="logo-container">
+                <div class="logo-text">
+                    <span class="logo-main">Astegni</span>
+                    <span class="logo-sub">Home</span>
+                </div>
+                <span class="logo-badge">Beta</span>
+            </a>
+
             </div>
             <div class="nav-menu">
                 <a href="../branch/news.html" class="nav-link">
@@ -121,9 +127,10 @@
                     <span>My Classes</span>
                     <span class="sidebar-badge">5</span>
                 </button>
+
                 <button class="sidebar-btn" data-content="books">
-                    <span class="sidebar-btn-icon">📚</span>
-                    <span>My Books</span>
+                    <span class="sidebar-btn-icon">🛒</span>
+                    <span>My Store</span>
                     <span class="sidebar-badge">5</span>
                 </button>
             </div>
