--- a/My Profile tier 2/super-admin-profile.html
+++ b/My Profile tier 2/super-admin-profile.html
@@ -25,11 +25,12 @@
                     <span></span>
                     <span></span>
                 </span>
-                <a href="../index.html" class="logo">Astegni</a>
-            </div>
-            <a href="../index.html" class="text-2xl font-bold">ASTEGNI</a>
+            </div>            <a class="logo-container text-2xl font-bold" href="index.html">
+                <span class="logo-text">Astegni</span>
+                <span class="logo-badge">BETA</span>
+            </a>
+
             <div class="hidden md:flex space-x-6 items-center">
-                <a href="../index.html" class="hover:text-[var(--nav-link-hover)]">Home</a>
                 <a href="find-tutors.html" class="hover:text-[var(--nav-link-hover)]">Find Tutors</a>
                 <a href="admin-profile.html" class="hover:text-[var(--nav-link-hover)]">Admin</a>
                 <button id="notification-bell" class="relative focus:outline-none" onclick="openNotificationModal()"
