--- a/branch/reels.html
+++ b/branch/reels.html
@@ -19,7 +19,14 @@
         aria-label="Main navigation"
     >
         <div class="container mx-auto flex justify-between items-center px-3 sm:px-4">
-            <a href="../index.html" class="text-xl sm:text-2xl font-bold animate-glow">ASTEGNI</a>
+
+                    <a href="../index.html" class="logo-container text-2xl font-bold">
+                        <div class="logo-text">
+                            <span class="logo-main">Astegni</span>
+                            <span class="logo-sub">Reels</span>
+                        </div>
+                        <span class="logo-badge">Beta</span>
+                    </a>
             
             <!-- Desktop Navigation -->
             <div class="hidden md:flex flex-1 items-center justify-center space-x-4 lg:space-x-6 mx-4">
@@ -480,6 +487,7 @@
 
 
     <!-- JavaScript for Interactivity -->
+     <script src="../js/protected-page.js"></script>
     <script src="../js/reels.js"></script>
     <script src="../js/videoplayer.js"></script>
 </body>
