--- a/My Profile tier 1/delivery-profile.html
+++ b/My Profile tier 1/delivery-profile.html
@@ -236,8 +236,14 @@
         <div class="container nav-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
             <div class="nav-brand">
-                <span class="logo-icon">🎯</span>
-                <span class="logo-text gradient-text">Astegni</span>
+                <a href="../index.html" class="logo-container">
+                    <div class="logo-text">
+                        <span class="logo-main">Astegni</span>
+                        <span class="logo-sub">Delivery</span>
+                    </div>
+                    <span class="logo-badge">Beta</span>
+                </a>
+
             </div>
             <div class="nav-menu">
                 <a href="../branch/news.html" class="nav-link">
@@ -343,15 +349,14 @@
                     <span>My Classes</span>
                     <span class="sidebar-badge">5</span>
                 </button>
-                <button class="sidebar-btn" data-content="books">
-                    <span class="sidebar-btn-icon">📚</span>
-                    <span>My Books</span>
-                    <span class="sidebar-badge">5</span>
-                </button>
+
             </div>
 
-            <div class="sidebar-section" data-content="permanent">
-
+            <div class="sidebar-section" data-content="entertainment">
+                <button class="sidebar-btn" data-content="events">
+                    <span class="sidebar-btn-icon">📅</span>
+                    <span>Events</span>
+                </button>
                 <button class="sidebar-btn" data-content="clubs">
                     <span class="sidebar-btn-icon">🎭</span>
                     <span>Clubs</span>
@@ -380,86 +385,93 @@
             </div>
             <div class="sidebar-divider"></div>
             <div class="sidebar-section" data-content="my-actions">
-                <button class="sidebar-btn" data-content="my-purchases">
-                    <span class="sidebar-btn-icon">📦</span>
-                    <span>My Purchases</span>
+                <button class="sidebar-btn" data-content="books">
+                    <span class="sidebar-btn-icon">🛒</span>
+                    <span>My Store</span>
+                    <span class="sidebar-badge">5</span>
                 </button>
-                <a href='../Plug-ins/notes.html'>
-                    <button class="sidebar-btn" data-content="notes">
-                        <span class="sidebar-btn-icon">📝</span>
-                        <span>Notes</span>
+                <div class="sidebar-section" data-content="my-actions">
+                    <button class="sidebar-btn" data-content="my-purchases">
+                        <span class="sidebar-btn-icon">📦</span>
+                        <span>My Purchases</span>
                     </button>
-                </a>
-                <button class="sidebar-btn" data-content="share">
-                    <span class="sidebar-btn-icon">🔗</span>
-                    <span>Share</span>
+                    <a href='../Plug-ins/notes.html'>
+                        <button class="sidebar-btn" data-content="notes">
+                            <span class="sidebar-btn-icon">📝</span>
+                            <span>Notes</span>
+                        </button>
+                    </a>
+
+                    <button class="sidebar-btn" data-content="my-community">
+                        <span class="sidebar-btn-icon">👥</span>
+                        <span>My community</span>
+                    </button>
+                    <button class="sidebar-btn" data-content="settings">
+                        <span class="sidebar-btn-icon">⚙️</span>
+                        <span>Settings</span>
+                    </button>
+                </div>
+
+                <!-- Quick Stats Section -->
+                <div class="sidebar-quick-stats">
+                    <h4>Quick Stats</h4>
+                    <div class="quick-stat-item">
+                        <span class="stat-label">Deliveries Today</span>
+                        <span class="stat-value">12</span>
+                    </div>
+                    <div class="quick-stat-item">
+                        <span class="stat-label">Calls Today</span>
+                        <span class="stat-value">23</span>
+                    </div>
+                    <div class="quick-stat-item">
+                        <span class="stat-label">Rating</span>
+                        <span class="stat-value">4.7/5</span>
+                    </div>
+                    <div class="quick-stat-item">
+                        <span class="stat-label">Earnings Today</span>
+                        <span class="stat-value">$156</span>
+                    </div>
+                </div>
+
+                <!-- Recent Activity Feed -->
+                <div class="sidebar-activity">
+                    <h4>Recent Activity</h4>
+                    <div class="activity-item">
+                        <span class="activity-icon">📦</span>
+                        <div class="activity-text">
+                            <p>Delivery completed</p>
+                            <span class="activity-time">30 min ago</span>
+                        </div>
+                    </div>
+                    <div class="activity-item">
+                        <span class="activity-icon">📞</span>
+                        <div class="activity-text">
+                            <p>Customer call answered</p>
+                            <span class="activity-time">1 hour ago</span>
+                        </div>
+                    </div>
+                    <div class="activity-item">
+                        <span class="activity-icon">⭐</span>
+                        <div class="activity-text">
+                            <p>5-star rating received</p>
+                            <span class="activity-time">2 hours ago</span>
+                        </div>
+                    </div>
+                    <div class="activity-item">
+                        <span class="activity-icon">💰</span>
+                        <div class="activity-text">
+                            <p>Payment received</p>
+                            <span class="activity-time">3 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Help Button -->
+                <button class="sidebar-help-btn">
+                    <span class="help-icon">💡</span>
+                    <span>Need Help?</span>
                 </button>
-                <button class="sidebar-btn" data-content="settings">
-                    <span class="sidebar-btn-icon">⚙️</span>
-                    <span>Settings</span>
-                </button>
             </div>
-
-            <!-- Quick Stats Section -->
-            <div class="sidebar-quick-stats">
-                <h4>Quick Stats</h4>
-                <div class="quick-stat-item">
-                    <span class="stat-label">Deliveries Today</span>
-                    <span class="stat-value">12</span>
-                </div>
-                <div class="quick-stat-item">
-                    <span class="stat-label">Calls Today</span>
-                    <span class="stat-value">23</span>
-                </div>
-                <div class="quick-stat-item">
-                    <span class="stat-label">Rating</span>
-                    <span class="stat-value">4.7/5</span>
-                </div>
-                <div class="quick-stat-item">
-                    <span class="stat-label">Earnings Today</span>
-                    <span class="stat-value">$156</span>
-                </div>
-            </div>
-
-            <!-- Recent Activity Feed -->
-            <div class="sidebar-activity">
-                <h4>Recent Activity</h4>
-                <div class="activity-item">
-                    <span class="activity-icon">📦</span>
-                    <div class="activity-text">
-                        <p>Delivery completed</p>
-                        <span class="activity-time">30 min ago</span>
-                    </div>
-                </div>
-                <div class="activity-item">
-                    <span class="activity-icon">📞</span>
-                    <div class="activity-text">
-                        <p>Customer call answered</p>
-                        <span class="activity-time">1 hour ago</span>
-                    </div>
-                </div>
-                <div class="activity-item">
-                    <span class="activity-icon">⭐</span>
-                    <div class="activity-text">
-                        <p>5-star rating received</p>
-                        <span class="activity-time">2 hours ago</span>
-                    </div>
-                </div>
-                <div class="activity-item">
-                    <span class="activity-icon">💰</span>
-                    <div class="activity-text">
-                        <p>Payment received</p>
-                        <span class="activity-time">3 hours ago</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Help Button -->
-            <button class="sidebar-help-btn">
-                <span class="help-icon">💡</span>
-                <span>Need Help?</span>
-            </button>
-        </div>
     </aside>
 
     <!-- Main Container -->
@@ -1776,9 +1788,9 @@
                 }
             });
         });
-
-
     </script>
+
+    <script src="../js/auth.js"></script>
     <script src="../js/institute-profile-1.js"></script>
     <script src="../js/institute-profile-2.js"></script>
     <script src="../js/institute-profile-3.js"></script>
