--- a/My Profile tier 1/tutor-profile.html
+++ b/My Profile tier 1/tutor-profile.html
@@ -237,8 +237,14 @@
         <div class="container nav-container">
             <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
             <div class="nav-brand">
-                <span class="logo-icon">🎯</span>
-                <span class="logo-text gradient-text">Astegni</span>
+            <a href="../index.html" class="logo-container">
+                <div class="logo-text">
+                    <span class="logo-main">Astegni</span>
+                    <span class="logo-sub">Tutor</span>
+                </div>
+                <span class="logo-badge">Beta</span>
+            </a>
+
             </div>
             <div class="nav-menu">
                 <a href="../branch/news.html" class="nav-link">
@@ -356,6 +362,10 @@
 <div class="sidebar-divider"></div>
         <!-- Permanent Section (UNCHANGED) -->
         <div class="sidebar-section" data-content="permanent">
+                        <button class="sidebar-btn" data-content="events">
+                <span class="sidebar-btn-icon">📅</span>
+                <span>Events</span>
+            </button>
             <button class="sidebar-btn" data-content="clubs">
                 <span class="sidebar-btn-icon">🎭</span>
                 <span>Clubs</span>
@@ -383,6 +393,11 @@
             </button>
 </div>
         <div class="sidebar-section" data-content="my-actions"> 
+                <button class="sidebar-btn" data-content="books">
+                    <span class="sidebar-btn-icon">🛒</span>
+                    <span>My Store</span>
+                    <span class="sidebar-badge">5</span>
+                </button>
             <button class="sidebar-btn" data-content="my-purchases">
                 <span class="sidebar-btn-icon">📦</span>
                 <span>My Purchases</span>
@@ -393,6 +408,11 @@
                     <span>Notes</span>
                 </button>
             </a>
+
+                            <button class="sidebar-btn" data-content="my-community">
+                    <span class="sidebar-btn-icon">👥</span>
+                    <span>My community</span>
+                </button>
             <button class="sidebar-btn" data-content="settings">
                 <span class="sidebar-btn-icon">⚙️</span>
                 <span>Settings</span>
@@ -771,7 +791,7 @@
                             <div class="student-header">
                                 <div class="student-avatar">👨‍🎓</div>
                                 <div class="student-info">
-                                    <h3>Abebe Kebede</h3>
+                                    <a href="../View profile tier 1/view-student.html"> <h3>Abebe Kebede</h3></a>
                                     <p>Grade 12 • Science Stream</p>
                                 </div>
                             </div>
@@ -825,7 +845,7 @@
                             <div class="student-header">
                                 <div class="student-avatar">👩‍🎓</div>
                                 <div class="student-info">
-                                    <h3>Selam Tesfaye</h3>
+                                    <a href="../View profile tier 1/view-student.html"><h3>Selam Tesfaye</h3></a>
                                     <p>Grade 11 • Science Stream</p>
                                 </div>
                             </div>
@@ -3052,7 +3072,7 @@
 
     </script>
 
-
+    <script src="../js/auth.js"></script>
     <script src="../js/institute-profile-1.js"></script>
     <script src="../js/institute-profile-2.js"></script>
     <script src="../js/institute-profile-3.js"></script>
