--- a/View profile tier 1/view-bookstore.html
+++ b/View profile tier 1/view-bookstore.html
@@ -55,8 +55,14 @@
     <div class="container nav-container">
       <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
       <div class="nav-brand">
-        <span class="logo-icon">🎯</span>
-        <span class="logo-text gradient-text">Astegni</span>
+            <a href="../index.html" class="logo-container">
+                <div class="logo-text">
+                    <span class="logo-main">Astegni</span>
+                    <span class="logo-sub">Bookstore</span>
+                </div>
+                <span class="logo-badge">Beta</span>
+            </a>
+
       </div>
       <div class="nav-menu">
         <a href="../branch/news.html" class="nav-link">
@@ -153,6 +159,11 @@
 
       <!-- User Actions -->
       <div class="sidebar-section" data-content="actions">
+                <button class="sidebar-btn" data-content="books">
+                    <span class="sidebar-btn-icon">🛒</span>
+                    <span>My Store</span>
+                    <span class="sidebar-badge">5</span>
+                </button>
         <div class="sidebar-section" data-content="bookstore">
           <button class="sidebar-btn" data-content="my-purchases">
             <span class="sidebar-btn-icon">📦</span>
@@ -1466,6 +1477,7 @@
     }
 
   </script>
+    <script src="../js/auth.js"></script>
   <script src="../js/institute-profile-1.js"></script>
   <script src="../js/institute-profile-2.js"></script>
   <script src="../js/institute-profile-3.js"></script>
