--- a/branch tier 2/find-jobs.html
+++ b/branch tier 2/find-jobs.html
@@ -654,6 +654,7 @@
   </button>
 
   <!-- JavaScript -->
+   <script src="../js/protected-page.js"></script>
   <script src="../js/find-jobs.js"></script>
 </body>
 </html>
