--- a/branch tier 2/yeneta-Exchange.html
+++ b/branch tier 2/yeneta-Exchange.html
@@ -877,7 +877,7 @@
             </div>
         </div>
     </div>
-
+<script src="../js/protected-page.js"></script>
     <script src="../js/yeneta-exchange.js"></script>
 </body>
 
