--- a/branch/reels.html
+++ b/branch/reels.html
@@ -38,20 +38,73 @@
                             d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                     </svg>
                 </div>
-                <a href="news.html" class="nav-link hover-lift">News</a>
-                <a href="find-tutors.html" class="nav-link hover-lift">Find tutors</a>
-                <a href="store.html" class="nav-link hover-lift">Store</a>
-                <a href="find-jobs.html" class="nav-link hover-lift">Find a Job</a>
+ 
             </div>
 
-            <div class="hidden md:flex items-center space-x-3">
-                <a href="profile.html" id="profile-link"
-                    class="flex items-center gap-2 px-3 py-2 rounded-full hover-glow transition-all duration-300">
-                    <img id="profile-pic"
-                        class="w-9 h-9 rounded-full ring-2 ring-[var(--button-bg)] ring-offset-2 transition-all duration-300 hover:ring-4"
-                        src="https://picsum.photos/32" alt="Profile Picture" />
-                    <span id="profile-name" class="text-sm font-semibold"></span>
-                </a>
+            <!-- Right Section: Navigation Links -->
+                <div class="nav-links hidden md:flex">
+                    <a class="nav-link px-2 py-1 rounded" href="#">
+                        <span class="nav-icon">📰</span> News
+                    </a>
+                    <a class="nav-link px-2 py-1 rounded" href="find-tutors.html"
+                        onclick="handleNavLinkClick(event, 'find-tutors')">
+                        <span class="nav-icon">👨‍🏫</span> Find Tutors
+                    </a>
+                    <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'store')">
+                        <span class="nav-icon">📚</span> Bookstore
+                    </a>
+                    <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'find-jobs')">
+                        <span class="nav-icon">💼</span> Find a Job
+                    </a>
+
+                    <!-- Profile container -->
+                    <div id="profile-container" class="profile-dropdown-container hidden">
+                        <button id="profile-dropdown-toggle" class="profile-dropdown-toggle"
+                            onclick="toggleProfileDropdown()">
+                            <img id="profile-pic" class="profile-pic" alt="Profile">
+                            <span id="profile-name" class="profile-name"></span>
+                            <svg class="dropdown-arrow" width="12" height="12" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
+
+                        <div id="profile-dropdown-menu" class="profile-dropdown-menu hidden">
+                            <!-- User info header -->
+                            <div class="dropdown-header">
+                                <img id="dropdown-profile-pic" class="dropdown-profile-pic" alt="Profile">
+                                <div class="dropdown-user-info">
+                                    <span id="dropdown-user-name" class="dropdown-user-name"></span>
+                                    <span id="dropdown-user-email" class="dropdown-user-email"></span>
+                                    <span id="dropdown-user-role" class="dropdown-user-role"></span>
+                                </div>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+
+                            <!-- Role switcher (shown only if user has multiple roles) -->
+                            <div id="role-switcher-section" class="role-switcher-section hidden">
+                                <div class="dropdown-divider"></div>
+                                <div class="dropdown-item-header">Switch Role</div>
+                                <div id="role-options" class="role-options">
+                                    <!-- Role options will be dynamically added here -->
+                                </div>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+
+                            <button class="dropdown-item logout-item" onclick="logout()">
+                                <svg class="dropdown-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1">
+                                    </path>
+                                </svg>
+                                Logout
+                            </button>
+                        </div>
+                    </div>
+
                 <button id="notification-bell" class="relative p-2 rounded-full hover-glow transition-all duration-300"
                     onclick="openNotificationModal()" aria-label="View notifications">
 
@@ -61,11 +114,20 @@
                 </button>
                 <button id="theme-toggle-btn" class="p-2 rounded-full hover-glow transition-all duration-500"
                     aria-label="Toggle theme">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
-                        </path>
-                    </svg>
+                    <!-- Sun Icon (shows in dark mode) -->
+                        <svg class="sun-icon w-6 h-6 hidden dark:block" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
+                            </path>
+                        </svg>
+                        <!-- Moon Icon (shows in light mode) -->
+                        <svg class="moon-icon w-6 h-6 block dark:hidden" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z">
+                            </path>
+                        </svg>
                 </button>
             </div>
 
@@ -83,20 +145,25 @@
                 </div>
                 <button id="mobile-notification-bell" class="relative p-2" onclick="openNotificationModal()"
                     aria-label="Notifications">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 00-12 0v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 01-6 0v-1m6 0H9">
-                        </path>
-                    </svg>
-                    <span id="mobile-notification-dot"
-                        class="absolute top-1 right-1 w-2 h-2 bg-red-500 rounded-full hidden animate-bounce"></span>
+                    <span class="notification-icon">🔔</span>
+                    <span id="notification-dot"
+                        class="absolute top-1 right-1 w-2.5 h-2.5 bg-red-500 rounded-full hidden animate-bounce"></span>
                 </button>
                 <button id="mobile-theme-toggle-btn" class="p-2" aria-label="Theme" onclick="toggleTheme()">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
-                        </path>
-                    </svg>
+                    <!-- Sun Icon (shows in dark mode) -->
+                        <svg class="sun-icon w-6 h-6 hidden dark:block" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
+                            </path>
+                        </svg>
+                        <!-- Moon Icon (shows in light mode) -->
+                        <svg class="moon-icon w-6 h-6 block dark:hidden" fill="none" stroke="currentColor"
+                            viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z">
+                            </path>
+                        </svg>
                 </button>
                 <button id="menu-btn" class="p-2 hamburger-menu" aria-label="Menu" aria-expanded="false">
                     <span class="hamburger-line"></span>
@@ -108,44 +175,25 @@
 
         <!-- Mobile Dropdown Menu -->
         <div id="mobile-menu" class="md:hidden">
-            <a href="news.html" class="block py-3 px-4 hover:bg-[var(--highlight-bg)] transition-all duration-300">
+            <a href="#" class="block py-3 px-4 hover:bg-[var(--highlight-bg)] transition-all duration-300">
                 <span class="flex items-center gap-3">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3H9M7 16h6M7 8h6v4H7V8z">
-                        </path>
-                    </svg>
-                    News
+                        <span class="nav-icon">📰</span> News
                 </span>
             </a>
             <a href="find-tutors.html"
                 class="block py-3 px-4 hover:bg-[var(--highlight-bg)] transition-all duration-300">
                 <span class="flex items-center gap-3">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z">
-                        </path>
-                    </svg>
-                    Find tutors
+                        <span class="nav-icon">👨‍🏫</span> Find Tutors
                 </span>
             </a>
-            <a href="store.html" class="block py-3 px-4 hover:bg-[var(--highlight-bg)] transition-all duration-300">
+            <a href="#" class="block py-3 px-4 hover:bg-[var(--highlight-bg)] transition-all duration-300">
                 <span class="flex items-center gap-3">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"></path>
-                    </svg>
-                    Store
+                        <span class="nav-icon">📚</span> Bookstore
                 </span>
             </a>
-            <a href="find-jobs.html" class="block py-3 px-4 hover:bg-[var(--highlight-bg)] transition-all duration-300">
+            <a href="#" class="block py-3 px-4 hover:bg-[var(--highlight-bg)] transition-all duration-300">
                 <span class="flex items-center gap-3">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
-                        </path>
-                    </svg>
-                    Find a Job
+                        <span class="nav-icon">💼</span> Find a Job
                 </span>
             </a>
             <a href="profile.html" class="block py-3 px-4 hover:bg-[var(--highlight-bg)] transition-all duration-300">
