--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,8 @@
                     </a>
                 </div>
                 <div class="footer-badges">
-                    <p class="copyright">© 2025 Astegni. All rights reserved.</p>
+                    <p class="copyright">© </p>
+                    <p>2025 Astegni. All rights reserved.</p>
                 </div>
                 <div class="footer-badges">
                     <span class="badge glow" tabindex="0">🔒 SSL Secured</span>
